tests/fixtures/negative/55_vec_raw_pointer_failure.yc
fn main() {
    values := Vec<i32>{}
    raw: *i32 := values
}
